Agregué nuevas pantallas al proyecto

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,17 +6,19 @@
    <div class="login-card">
 
     <div class="header-section">
-        <h1 class="title-text">Inicio de sesion</h1>
+        <h1 class="title-text">Iniciar Sesion</h1>
     </div>
 
     <div class="form-container">
         <div class="input-group">
-          <p class="field-label">Correo electronico, Celular o Curp</p>
+          <p class="field-label">Correo electronico</p>
         <div class="input-item-box">
           <input type="text" placeholder="Ingrese sus datos" class="native-input">
         </div>
     </div>
 
+      <!--La primera vez que el usuario inicie sesion, entrara con la contraseña que se le dio cuando
+      lo registraron-->
         <div class="input-group">
           <label class="field-label">Contraseña</label>
           <div class="input-item-box">
