--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -5,10 +5,9 @@
 <div class="login-wrapper">
    <div class="login-card">
 
-<div class="header-section">
-    <h1 class="title-text">Iniciar Sesion</h1>
-    <p class="login-subtext">Ingrese sus credenciales para continuar</p>
-</div>
+    <div class="header-section">
+        <h1 class="title-text">Iniciar Sesion</h1>
+    </div>
 
     <div class="form-container">
         <div class="input-group">
@@ -21,25 +20,11 @@
       <!--La primera vez que el usuario inicie sesion, entrara con la contraseña que se le dio cuando
       lo registraron-->
         <div class="input-group">
-
-          <div class="password-label-row">
-            <label class="field-label">Contraseña</label>
-            <span class="forgot-text">¿Olvidó sus datos?</span>
-          </div>
-
+          <label class="field-label">Contraseña</label>
           <div class="input-item-box">
-            <input 
-              [type]="showPassword ? 'text' : 'password'" 
-              placeholder="Ingrese su contraseña" 
-              class="native-input">
-
-            <ion-icon
-              [name]="showPassword ? 'eye-off-outline' : 'eye-outline'"
-              class="password-eye"
-              (click)="togglePassword()">
-            </ion-icon>
+            <input type="password" placeholder="Ingrese su contraseña" class="native-input">
           </div>
-
+          <p class="forgot-text">¿Olvido sus datos de acceso?</p>
         </div>
   </div>
 
