--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -27,12 +27,6 @@
 
 }
 
-.login-subtext {
-  font-size: 13px;
-  font-weight: 700;
-  color: #94a3b8; 
-  margin-top: 6px;
-}
 
 .input-group {
   margin-bottom: 22px;
@@ -46,7 +40,6 @@
   }
 
   .input-item-box {
-    justify-content: space-between;
     background: #f8fafc;
     border: 1px solid #e2e8f0;
     border-radius: 12px;
@@ -85,7 +78,7 @@
 .forgot-text {
   margin-top: 15px;
   text-align: left;
-  color: #2563eb;
+  color: #1A3D63;
   font-weight: 700;
   font-size: 14px;
   cursor: pointer;
@@ -97,22 +90,4 @@
     color: #64748b; 
     font-size: 14px; 
   }
-}
-.password-eye {
-  font-size: 20px;
-  color: #94a3b8;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-}
-.password-label-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 8px;
-}
-
-.password-label-row .forgot-text {
-  margin: 0;
-  font-size: 12px;
 }
