--- a/src/global.scss
+++ b/src/global.scss
@@ -1,38 +1,67 @@
 /*
  * App Global CSS
  * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
-/* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
-
-/* Basic CSS for apps built with Ionic */
 @import "@ionic/angular/css/normalize.css";
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/typography.css";
 @import "@ionic/angular/css/display.css";
-
-/* Optional CSS utils that can be commented out */
 @import "@ionic/angular/css/padding.css";
 @import "@ionic/angular/css/float-elements.css";
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
-
-/**
- * Ionic Dark Mode
- * -----------------------------------------------------
- * For more info, please see:
- * https://ionicframework.com/docs/theming/dark-mode
- */
-
-/* @import "@ionic/angular/css/palettes/dark.always.css"; */
-/* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
 
+
+:root {
+  --bg-overlay-color: rgba(10, 20, 30, 0.7); //
+  --bg-image-url: url('/assets/backgrounds/industrial-bg.jpg');
+
+  // Colores (para elementos decorativos)
+  --signal-red: #ff3b30;
+  --signal-yellow: #ffcc00;
+  --signal-green: #34c759;
+}
+
+/* Clase base para paginas */
+.industrial-bg {
+  --background: none; // Elimina fondo por defecto de Ionic
+  background: linear-gradient(
+    var(--bg-overlay-color),
+    var(--bg-overlay-color)
+  ), var(--bg-image-url) no-repeat center center fixed;
+  background-size: cover;
+}
+
+/* Decoracion Luces de semaforo sutiles en el fondo */
+.industrial-bg::before {
+  content: '';
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 100px;
+  height: 30px;
+  background: linear-gradient(90deg,
+    var(--signal-red) 0%,
+    var(--signal-red) 33%,
+    var(--signal-yellow) 33%,
+    var(--signal-yellow) 66%,
+    var(--signal-green) 66%,
+    var(--signal-green) 100%);
+  border-radius: 20px;
+  opacity: 0.15; //
+  pointer-events: none; //
+  z-index: 0;
+}
+
+/* Para garantizar que el contenido sea legible sobre el fondo */
+.ion-content-legible {
+  --background: transparent;
+
+  &::part(background) {
+    background: transparent;
+  }
+}
